update the padding of the section to ensure good spacing

--- a/src/assets/css/_footer.scss
+++ b/src/assets/css/_footer.scss
@@ -72,7 +72,7 @@
 @media screen and (width <=726px) {
     .footer_containter{
         .footer_copy{
-            font-size: 0.9em;
+            font-size: 0.8em;
         }
     }
 }
